--- a/app/assets/stylesheets/header.scss
+++ b/app/assets/stylesheets/header.scss
@@ -21,8 +21,7 @@
   font-size: 1.3em;
   color: #f9c31a;
   &:hover {
-    font-size: 1.4em;
     text-decoration: none;
-    color: #f8b71d;
+    color: #d51a1f;
   }
 }
