--- a/app/assets/stylesheets/todos.scss
+++ b/app/assets/stylesheets/todos.scss
@@ -1,3 +1,11 @@
 // Place all the styles related to the todos controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: https://sass-lang.com/
+
+.todo-link {
+  color: rgb(0, 0, 0);
+  &:hover {
+    text-decoration: none;
+    color: #f9c31a;
+  }
+}
