--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -15,23 +15,14 @@
           </div>
           <ul class="nav navbar-nav navbar-right collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <% if logged_in? %>
-              <li class="dropdown">
-                <a href="#" class="dropdown-toggle" data-toggle="dropdown" id="quicklink">
-                  Profile<b class="caret"></b>
-                </a>
-                <ul class="dropdown-menu">
-                  <li><%= link_to "View", user_url(current_user), id: "quicklink" %></li>
-                  <li><%= link_to "Edit", '#', id: "quicklink" %></li>
-                  <li><%= link_to "Delete", '#', id: "quicklink" %></li>
-                </ul>
-              </li>
+              <li><%= link_to "Profile", user_path(current_user), id: "quicklink" %></li>
               <li class="dropdown">
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown" id="quicklink">
                   Todos<b class="caret"></b>
                 </a>
                 <ul class="dropdown-menu">
-                  <li><%= link_to "New", new_todo_url, id: "quicklink" %></li>
-                  <li><%= link_to "View all", todos_url, id: "quicklink" %></li>
+                  <li><%= link_to "New todo", new_todo_url, id: "quicklink" %></li>
+                  <li><%= link_to "All todos", todos_url, id: "quicklink" %></li>
                 </ul>
               </li>
               <li><%= link_to "Logout", logout_path, method: :delete, id: "quicklink" %></li>
