--- a/app/views/todos/new.html.erb
+++ b/app/views/todos/new.html.erb
@@ -10,6 +10,9 @@
       <%= f.label :title %>
       <%= f.text_field :title, class: "form-control" %>
 
+      <%= f.label :deadline %>
+      <%= f.date_field :deadline, min: Date.today, class: "form-control" %>
+
       <%= f.submit "Create Todo", class: "btn btn-primary" %>
     
     <% end %>
