--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,2 +1,29 @@
-<h1>Users#edit</h1>
-<p>Find me in app/views/users/edit.html.erb</p>
+<% provide(:title, "Edit User") %>
+
+<h1>Edit</h1>
+
+<div class="row">
+  <div class="col-md-6 col-md-offset-3">
+
+    <%= form_with(url: user_url, method: :put, local: true) do |f| %>
+
+      <%= f.hidden_field :id, value: @id %>
+
+      <%= f.label :name %>
+      <%= f.text_field :name, class: "form-control", value: @name %>
+
+      <%= f.label :email %>
+      <%= f.email_field :email, class: "form-control", value: @email %>
+
+      <%= f.label :password %>
+      <%= f.password_field :password, class: "form-control", value: session[:password] %>
+
+      <%= f.label :password_confirmation %>
+      <%= f.password_field :password_confirmation, class: "form-control", value: session[:password] %>
+    
+      <%= f.submit "Update profile", class: "btn btn-primary" %>
+
+    <% end %>
+
+  </div>
+</div>
