--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,4 +1,23 @@
 <% provide(:title, 'Profile') %>
 
-<h1>Users#show</h1>
-<h2>Welcome <%= @name %>!</h2>
+<div class="row">
+  <aside class="col-md-4">
+    <h1 style="text-align: left;"><%= @name %></h1>
+    <p style="text-align: left;"><%= link_to "Edit profile", edit_user_url(params[:id], name: @name, email: @email), id: "quicklink" %></p>
+    <p style="text-align: left;"><%= link_to "Delete account", user_path(@user.id), method: :delete, data: { confirm: "Are you sure?" }, id: "quicklink" %></p>
+  </aside>
+  <div class="col-md-8">
+    <h2 style="text-align: left; padding-left: 35px;">Todos count: <%= @todos_count %></h2>
+    <h4 style="text-align: left; padding-left: 35px;"><%= link_to "New todo", new_todo_path, id: "quicklink" %></h4>
+    <div class="page-top">
+      <% if @todos_count > 0 %>
+        <ul>
+          <% @all_todos.each do |todo| %>
+            <%= render partial: 'todos/todo', object: todo %>
+          <% end %>
+        </ul>
+      <% end %>
+    </div>
+  </div>
+</div>
+    
